# kickstarter

./: pyproject.toml
kickstarter/: creators_urls.csv  main.py
