[tool.poetry]
name = "kickstarter"
version = "0.1.0"
description = ""
authors = ["Rafael de Carvalho <rafael@bgcbrasil.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
selenium-driverless = "^1.9.3.1"
beautifulsoup4 = "^4.12.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
